fix: search box z-index.

--- a/public/coffeescripts/cards/cards.css
+++ b/public/coffeescripts/cards/cards.css
@@ -4,6 +4,7 @@
   display: block;
   top: 0;
   padding-top: 14px;
+  z-index: 100;
 }
 
 .cards-list .search-result {
